@@ -1,69 +1,74 @@
-group 'ru.akhitev.rp'
-version '0.0.2'
+plugins {
+    id 'application'
+    id 'idea'
+    id 'org.openjfx.javafxplugin' version '0.0.5'
+}
 
-buildscript {
-    ext {
-        springBootVersion = '2.0.0.M6'
+repositories {
+    mavenCentral()
+}
+
+javafx {
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+mainClassName = "$moduleName/ru.akhitev.rp.map.Launcher"
+
+def java_home = "/usr/lib/jvm/jdk-11.0.1"
+def fx_jmods = "/opt/java/javafx-jmods-11.0.1"
+
+jar {
+    manifest {
+        attributes "Main-Class": "ru.akhitev.rp.map.Launcher"
     }
-    repositories {
-        mavenCentral()
-        maven { url "https://repo.spring.io/snapshot" }
-        maven { url "https://repo.spring.io/milestone" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'idea'
-apply plugin: 'io.spring.dependency-management'
+task jlink(type: Exec) {
+    dependsOn 'clean'
+    dependsOn 'jar'
+    workingDir 'build'
 
-task makeTempDir(){
-    File dir = new File("distrib")
-    dir.mkdir()
-    dir = new File("distrib/galaxy_map")
-    dir.mkdir()
-    dir = new File("distrib/galaxy_map/images")
-    dir.mkdir()
-}
-
-task generateLaunchers(){
-    dependsOn << makeTempDir
-    File guiLauncher = new File('distrib/galaxy_map/gui.bat')
-    guiLauncher.createNewFile()
-    guiLauncher.write("java -jar ${project.name}-${version}.jar GUI")
+    commandLine "${java_home}/bin/jlink", '--module-path', "${java_home}/jmods:/${fx_jmods}",
+            '--add-modules', 'java.xml,java.logging,java.base,java.sql,javafx.fxml,javafx.controls,javafx.graphics,java.naming,java.instrument',
+            '--output', "${moduleName}"
 }
 
 task copyJar(type: Copy){
-    dependsOn << generateLaunchers
-    dependsOn << build
-    from "${buildDir}/libs/${project.name}-${version}.jar"
-    into 'distrib/galaxy_map'
-    println "${buildDir}/libs/${project.name}-${version}.jar"
+    dependsOn 'clean'
+    dependsOn 'jar'
+    dependsOn 'jlink'
+    println "${buildDir}/libs/${project.name}.jar"
+    println "${buildDir}/rp.map/bin/map.jar"
+    from "${buildDir}/libs/${project.name}.jar"
+    into "${buildDir}/rp.map/bin"
 }
 
-task copyImages(type: Copy){
-    dependsOn << copyJar
-    from 'images'
-    into 'distrib/galaxy_map/images'
+task generateLaunchers(){
+    dependsOn 'clean'
+    dependsOn 'jar'
+    dependsOn 'jlink'
+    dependsOn 'copyJar'
+    println "${buildDir}/rp.map/bin/launcher.sh"
+    File guiLauncher = new File("${buildDir}/rp.map/bin/launcher.sh")
+    guiLauncher.createNewFile()
+    guiLauncher.write("#!/bin/bash\n")
+    guiLauncher.write("./java -jar ${project.name}.jar map.jar")
+    guiLauncher.setExecutable(true, false)
 }
 
 task makeZip(type: Zip) {
-    dependsOn << copyImages
-    from 'distrib/galaxy_map'
-    archiveName 'galaxy_map.zip'
+    dependsOn 'clean'
+    dependsOn 'jar'
+    dependsOn 'jlink'
+    dependsOn 'copyJar'
+    dependsOn 'generateLaunchers'
+    from "${buildDir}/rp.map"
+    archiveName "${buildDir}/rp_map.zip"
 }
-
-jar {
-    baseName = 'galaxy_map'
-    version =  '0.0.2'
-}
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -72,33 +77,11 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.0.M6'
-    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '2.0.0.M6'
-    compile group: 'org.springframework.boot', name: 'spring-boot', version: '2.0.0.M6'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.0.0.M6'
-    compile group: 'de.roskenet', name: 'springboot-javafx-support', version: '+'
-    compile group: 'org.springframework', name: 'spring-context', version: '+'
-    compile group: 'javax.inject', name: 'javax.inject', version: '+'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '+'
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '+'
-    compile group: 'org.projectlombok', name: 'lombok', version: '+'
+    compile group: 'org.springframework', name: 'spring-context', version: '5.0.6.RELEASE'
+    compile group: 'org.springframework', name: 'spring-beans', version: '5.0.6.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.3.RELEASE'
+    compile group: 'org.springframework', name: 'spring-orm', version: '5.0.6.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '+'
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '+'
-    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '+'
-    compile group: 'org.springframework', name: 'spring-tx', version: '+'
-    compile group: 'org.springframework', name: 'spring-orm', version: '+'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.0.0.M6'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.0.0.M6'
-    compile group: 'com.h2database', name: 'h2', version: '+'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-test', version: '2.0.0.M6'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-test-autoconfigure', version: '2.0.0.M6'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.0.M6'
-    testCompile group: 'junit', name: 'junit', version: '+'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '+'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '+'
-    testCompile group: 'org.springframework', name: 'spring-test', version: '+'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '+'
-    testCompile group: 'org.dbunit', name: 'dbunit', version: '+'
-    testCompile group: 'de.roskenet', name: 'springboot-javafx-test', version: '+'
+    compile group: 'org.hsqldb', name: 'hsqldb', version: '+'
 }
